<resources>
    <string name="activity_intent_filter_action" translatable="false">com.dwexample.ACTION</string>
    <string name="datawedge_intent_key_source" translatable="false">com.symbol.datawedge.source</string>
    <string name="datawedge_intent_key_label_type" translatable="false">com.symbol.datawedge.label_type</string>
    <string name="datawedge_intent_key_data" translatable="false">com.symbol.datawedge.data_string</string>
    <string name="datawedge_intent_key_source_legacy" translatable="false">com.motorolasolutions.emdk.datawedge.source</string>
    <string name="datawedge_intent_key_label_type_legacy" translatable="false">com.motorolasolutions.emdk.datawedge.label_type</string>
    <string name="datawedge_intent_key_data_legacy" translatable="false">com.motorolasolutions.emdk.datawedge.data_string</string>


    <string name="app_name">EcoScan</string>
    <string name="new_order">New order</string>
    <string name="check_orders">Check orders</string>
    <string name="settings">Settings</string>
    <string name="complete">Complete</string>
    <string name="come_back">Come back</string>
    <string name="delete">Delete</string>
    <string name="synchronize">Synchronize</string>
    <string name="orders">Orders</string>
    <string name="title">Title</string>
    <string name="date">date</string>
    <string name="code">code</string>
    <string name="synch">synch</string>
    <string name="menu">Menu</string>
    <string name="code_rv">Code:</string>
    <string name="label_rv">Type:</string>
    <string name="ecoscan_settings">EcoScan Settings</string>
    <string name="filter">Filter</string>
    <string name="allow_non_unique_code">Allow non unique code</string>
    <string name="check_length">Check length</string>
    <string name="advanced_filter">Advanced Filter</string>
    <string name="admin_configuration">Admin Configuration</string>
    <string name="allow_edit_during_scanning">Allow edit during scanning</string>
    <string name="allow_edit_orders">Allow edit orders</string>
    <string name="add_location_to_code">Add Location to code</string>
    <string name="enable_logging">Enable logging</string>
    <string name="server_configuration">Server Configuration</string>
    <string name="send_data_to_server">Send data to server</string>
    <string name="autosynchronization">Autosynchronization</string>
    <string name="configure_server">Configure server</string>
    <string name="client_configuration">Client Configuration</string>
    <string name="identifier">Identifier</string>
    <string name="language">Language</string>
    <string name="change_login">Change login</string>
    <string name="change_password">Change password</string>
    <string name="_000">0000</string>
    <string name="label_types">Label Types</string>
    <string name="data_management">Data Management</string>
    <string name="hide_synch_data">Hide synch data</string>
    <string name="sent_all_data_to_server">Sent all data to server</string>
    <string name="delete_synch_data">Delete synch data</string>
    <string name="clear_all_data">Clear all data</string>
    <string name="get_settings_from_server">Get Settings from server</string>
    <string name="reset_settings">Reset Settings</string>
    <string name="enter_the_order_number">Enter the order number</string>
    <string name="order_number">order number</string>
    <string name="create_new_order">Create new order</string>
    <string name="are_you_sure">Are you sure?</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="server_was_configured">Server was configured successfully</string>
    <string name="something_wrong_with_server">Something wrong with server</string>
    <string name="something_wrong">Something wrong</string>
    <string name="get_settings">Get settings</string>
    <string name="settings_was_applied">Settings was applied</string>



    <string name="d_complete_order">Do you want to complete order?</string>
    <string name="t_empty_list">No code in order</string>
    <string name="t_save_order_success">Order was successfully saved</string>
    <string name="t_save_order_fail">Something wrong</string>
    <string name="t_code_not_match_filter">Something wrong</string>
    <string name="order_was_successfully_saved">Order was successfully saved</string>
    <string name="okay">okay</string>
    <string name="all_labels_are_accepted">All labels are accepted</string>
    <string name="login">login</string>
    <string name="password">password</string>
    <string name="login2">Login</string>
    <string name="prefix">Prefix</string>
    <string name="suffix">Suffix</string>
    <string name="ending">Ending</string>
    <string name="label">Label</string>
    <string name="none">none</string>
    <string name="labels">Labels</string>
    <string name="clear_label_list">Clear label list</string>
    <string name="clear">Clear</string>
    <string name="apply">Apply</string>
    <string name="new_login">new login</string>
    <string name="change">Change</string>
    <string name="code_length">Code length</string>
    <string name="min_length">MIN length</string>
    <string name="max_length">MAX length</string>
    <string name="server_address">Server address</string>
    <string name="https">https://...</string>
    <string name="result_connection">Result connection</string>
    <string name="check_connection">Check connection</string>
    <string name="synch_with_server">Synch with server</string>
    <string name="hide_synch_orders">Hide synch orders</string>
    <string name="show_all_orders">Show all orders</string>
    <string name="login_or_password_are_incorrect">Login or password are incorrect!</string>
    <string name="delete_order_without_synchoronization">Delete order without synchoronization?</string>
    <string name="delete_order">Delete order?</string>
    <string name="you_try_to_delete_last_code_in_order_after_this_order_will_delete_automatically">You try to delete last code in order? After this order will delete automatically</string>
    <string name="order_was_saved_successfully">Order was saved successfully</string>
    <string name="change_password2">Change password</string>
    <string name="new_password">new password</string>
    <string name="old_password">old password</string>
    <string name="password_was_changed">Password was changed</string>
    <string name="reset_all_settings">Reset all settings</string>
    <string name="default_settings_was_set">Default settings was set</string>
    <string name="order_number_already_exists">Order number already exists</string>
    <string name="success">Success</string>
    <string name="server_is_not_configured">Server is not configured</string>
    <string name="all_synch_orders_was_deleted">All synch orders was deleted</string>
    <string name="delete_all_synch_data">Delete all synch data</string>
    <string name="delete_all_data_about_orders">Delete all data about orders</string>
    <string name="all_orders_was_deleted">All  orders was deleted</string>
    <string name="all_data_was_synch">All data was synch</string>
    <string name="sent_all_data_to_server2">Sent all data to server</string>
    <string name="login_was_changed">Login was changed</string>
    <string name="new_login1">new login</string>
    <string name="change_login1">Change login</string>
    <string name="advanced_filter1">Advanced Filter</string>
    <string name="create_new_order1">Create new order</string>
    <string name="length">Length</string>
    <string name="server_configuration1">Server configuration</string>
    <string name="login_or_password_are_incorrect1">Login or password are incorrect!</string>
    <string name="order_is_empty">Order is empty</string>


</resources>