<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:padding="20dp"
    android:layout_height="wrap_content">
    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:baselineAligned="false">


        <LinearLayout
            android:layout_width="0dp"
            android:layout_weight="3"
            android:layout_height="match_parent"
            android:orientation="vertical">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                style="@style/simpleText"
                android:text="@string/prefix" />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                style="@style/simpleText"
                android:text="@string/suffix" />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                style="@style/simpleText"
                android:text="@string/ending" />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                style="@style/simpleText"
                android:text="@string/label" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="0dp"
            android:layout_weight="4"
            android:layout_height="match_parent"
            android:gravity="center_horizontal"
            android:orientation="vertical">

            <EditText
                android:id="@+id/set_prefix"
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:ems="10"
                android:hint="@string/none"
                android:inputType="text"
                android:text="" />
            <EditText
                android:id="@+id/set_suffix"
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:ems="10"
                android:hint="@string/none"
                android:text="" />
            <EditText
                android:id="@+id/set_ending"
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:ems="10"
                android:hint="@string/none"
                android:inputType="text"
                android:text="" />

            <Spinner
                android:id="@+id/set_labels"
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:contentDescription="@string/labels"
                android:minHeight="48dp" />

        </LinearLayout>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <ScrollView
            android:layout_width="0dp"
            android:layout_weight="4"
            android:layout_height="100dp">
            <TextView
                android:id="@+id/set_labelList"
                android:layout_margin="10dp"
                android:layout_width="wrap_content"
                android:text="@string/all_labels_are_accepted"
                android:layout_height="wrap_content" />
        </ScrollView>
        <androidx.constraintlayout.utils.widget.ImageFilterButton
            android:id="@+id/set_btn_clearLabelList"
            android:layout_gravity="center"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_margin="20dp"
            android:minWidth="100dp"
            android:text="@string/clear"
            android:contentDescription="@string/clear_label_list"
            android:src="@drawable/ic_clear"
            android:background="@android:color/transparent"
            android:layout_height="wrap_content" />
    </LinearLayout>
    <Button
        android:id="@+id/set_btn_advancedFilter"
        android:layout_gravity="center"
        android:layout_width="wrap_content"
        android:layout_margin="20dp"
        android:minWidth="150dp"
        android:text="@string/apply"
        style="@style/btnSettings"
        android:layout_height="wrap_content" />

</LinearLayout>